GNOME Bugzilla – Bug 640705
Incorrect DEFAULT_AUDIOSINK macros in config.h files for win32
Last modified: 2011-01-27 15:38:38 UTC
3 such files exist: gst-plugins-base/win32/common/config.h gst-plugins-good/win32/common/config.h gst-plugins-ugly/win32/common/config.h this macro says "directaudiosink" while it must be "directsoundsink" This also causes playsink to fail because it cannot find directaudiosink.
Fixed in -base/good/ugly, thanks: commit aa641a1aa8f937d0f8b917e47f125966b66d19d1 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Thu Jan 27 15:26:25 2011 +0000 win32: fix DEFAULT_AUDIOSINK, should be direct*sound*sink https://bugzilla.gnome.org/show_bug.cgi?id=640705