win32: fix DEFAULT_AUDIOSINK, should be direct*sound*sink

https://bugzilla.gnome.org/show_bug.cgi?id=640705